package.json파일 수정

--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"vite\" \"npm run json-server-users\" \"npm run json-server-transactions\" \"npm run json-server-settings\"",
+    "dev": "concurrently \"vite\" \"npm run json-server-users\" \"npm run json-server-transactions\"",
     "serve": "vite preview",
     "build": "vite build",
     "json-server-users": "json-server --watch ./db-server/users.json --port 3001",
-    "json-server-transactions": "json-server --watch ./db-server/transactions.json --port 3002",
-    "json-server-settings": "json-server --watch ./db-server/settings.json --port 3003"
+    "json-server-transactions": "json-server --watch ./db-server/transactions.json --port 3002"
   },
   "dependencies": {
     "axios": "^1.7.2",
